css/main.css
/***** Template ****/
* {
  font-family: 'Merriweather', Arial, sans-serif;
  letter-spacing: .1rem;
}
html {
  margin-top: 0px;
  padding-top: 0;
  border-top: 1px solid #4F8EF7;
  
  background: url(../img/themes/crossword.png);

  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -ms-transition: all 1s ease;
  -o-transition: all 1s ease;
  transition: all 1s ease;
}
body {
  padding: 0;
}
.title {
  color: rgb(34, 34, 34);
  display: block;
  font-size: 30px;
  font-weight: 300;
  height: 32px;
  letter-spacing: .1rem;
  line-height: 52.5px;
  margin-bottom: 20px;
  margin-top: 0px;
  text-align: center;
}
.plugin ::-webkit-scrollbar {
  width: 8px;
}
.plugin ::-webkit-scrollbar-button {
  width: 8px;
  height:5px;
}
.plugin ::-webkit-scrollbar-track {
  background:#eee;
  border: thin solid lightgray;
  box-shadow: 0px 0px 3px #dfdfdf inset;
  border-radius:10px;
}
.plugin ::-webkit-scrollbar-thumb {
  background: #999;
  border: thin solid gray;
  border-radius:10px;
}
.plugin ::-webkit-scrollbar-thumb:hover {
  background:#7d7d7d;
}
.centered {
    margin: 0 auto;
}
.hero {
  padding: 10px 0 20px 0;
  text-align: center;
}
.hero nav-bar {
  display: block;
}
.hero nav-bar ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
  display: inline;
}
.hero nav-bar ul li a {
  font-size: 11px;
  text-transform: uppercase;
  font-weight: 600;
  letter-spacing: .2rem;
  margin-right: 35px;
  text-decoration: none;
  line-height: 2.3rem;
  color: #222;
}
.hero nav-bar ul li.active a,
.hero nav-bar ul li a:hover {
  color: #1EAEDB;
}
.hero nav-bar ul li {
  margin-left: 20px;
  display: inline;
}
.hero nav-bar ul li a {
  display: inline;
}
#theme-switcher {
  position: fixed;
  top: 25px;
  right: -320px;
  border-radius: 5px 0px 0px 5px;
  padding: 4px;
  z-index: 999999;
  cursor: pointer;
  color: rgb(255, 255, 255);
  background-color: #517fa4;

  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}
#theme-switcher .settings-icon{
  font-size: 25px;
  height: 100%;
  margin-top: 5px;
  float: left;
  display: inline-block;
}
#theme-switcher .settings-icon:hover{
  color: #243949;
}
#theme-switcher.open {
  right: 0;
}
#theme-switcher .option {
  margin: 5px;
  border: 1px solid transparent;
  display: inline-block;
  padding: 5px;
  color: black;
  background-color: #ececec;
  border-radius: 2px;
   -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}
#theme-switcher .option:hover,
#theme-switcher .option.selected {
  box-shadow: 0 5px 10px rgba(0,0,0,.53),0 3px 10px rgba(0,0,0,.16);
  background-color: #FFF94C;
}
#theme-switcher .option.selected:hover {
  background-color: lightgrey;
}
@media (min-width: 1080px) { 
  #plugins {
    float: none;
    margin: 0 auto;
    clear: both;
  }
}
@media (max-width: 1079px) { 
  #plugins {
    float: none;
    margin: 0 auto;
    clear: both;
  }
}

/***** Plugins Container ****/
#plugins {
  padding: 20px;
  padding-top: 0;
  margin-top: 0;
  border: 1px;
}

/***** Plugin ****/
.plugin {
  float: left;
  padding: 0;
  background-color: #FFFFFF;
  color: black;
  text-align: center;
  border-radius: 2px;
  box-shadow: 0 5px 10px rgba(0,0,0,.53),0 3px 10px rgba(0,0,0,.16);
  margin-top: 10px;
  margin: 0 auto;
  margin-top: 20px;
  margin-left: 50px;
  margin-bottom: 50px;
}
@media (max-width: 768px) { 
  .plugin {
    max-width: 80%;
    float: none;
    margin: 0 auto;
    margin-bottom: 10px;
  }
  .plugin-body {
    max-height: 400px;
  }
}
.plugin .top-bar {
  height: 25px;
  max-width: 100%;
  padding: 20px;
  letter-spacing: .1rem;
  line-height: 1.3rem;
  font-size: 11px;
  text-transform: uppercase;
  font-weight: 600;
  color: #009587;
  text-align: center;
}
.plugin .no-padding {
  padding: 0px;
}
.plugin-body {
  height: 400px;
  font-size: 12px;
  padding: 10px;
  line-height: 30px;
  overflow: auto;
  border-top: 1px solid #ececec;
}
.plugin last-update{
  font-size: 11px;
  float: left;
}

no-data {
  font-style: italic;
}
refresh-btn button {
  background-color: #009587;
  border: 0;
  float: right;
  font-size: 15px;
  color: white;
  border-radius: 50%;
  width: 30px;
  height: 30px;
  padding: 5px;

  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;

  box-shadow: 0 1px 6px rgba(0,0,0,.12),0 1px 6px rgba(0,0,0,.5);
}
refresh-btn button:hover {
  background-color: #ffeb3b;
  color: black;
}
refresh-btn button:active {
  background-color: #0f9d58;
}
@-webkit-keyframes spin {
  0% {
    -ms-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
    100% {
    -ms-transform: rotate(-2160deg);
    -webkit-transform: rotate(-2160deg);
    transform: rotate(-2160deg);
  }
}
  @-ms-keyframes spin {
    0% {
    -ms-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
    }
    100% {
    -ms-transform: rotate(-2160deg);
    -webkit-transform: rotate(-2160deg);
    transform: rotate(-2160deg);
    }
  }
  @keyframes spin {
    0% {
    -ms-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
    }
    100% {
    -ms-transform: rotate(-2160deg);
    -webkit-transform: rotate(-2160deg);
    transform: rotate(-2160deg);
    }
  }
  @-webkit-keyframes normal-opacity {
    0% {
    opacity: 1;
    }
    45% {
    opacity: 0;
    }
    55% {
    opacity: 0;
    }
    100% {
    opacity: 1;
    }
  }
  @-ms-keyframes normal-opacity {
    0% {
    opacity: 1;
    }
    45% {
    opacity: 0;
    }
    55% {
    opacity: 0;
    }
    100% {
    opacity: 1;
    }
  }
  @keyframes normal-opacity {
    0% {
    opacity: 1;
    }
    45% {
    opacity: 0;
    }
    55% {
    opacity: 0;
    }
    100% {
    opacity: 1;
    }
  }

.loader {
  -webkit-animation: 1.25s spin cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
  animation: 1.25s spin cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  overflow: hidden;
}
.loader:before, .loader:after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  top: 0;
  left: 0;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  border: 20px solid black;
  border-top-color: #fa4248;
  border-left-color: #5ddbba;
  border-bottom-color: #ede670;
  border-right-color: #64c3f2;
}
.loader{
  float: none;
  margin: 0 auto;
}
.loader:before {
  -webkit-filter: blur(2px);
  filter: blur(2px);
}
.loader:after {
  -webkit-animation: 1.25s normal-opacity cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
  animation: 1.25s normal-opacity cubic-bezier(0.46, -0.4, 0.2, 1.51) infinite both;
}
/**** General Elements ****/
table
{
  font-size: 10px;
  margin: 0;
  min-width: 400px;
  border-collapse: collapse;
  text-align: left;
  table-layout:fixed;
}
table th, 
table td {
  padding: 5px;
  max-width: 250px;
  word-wrap: break-word;
}
table th
{
  font-weight: 600;
  text-transform: uppercase;
  border-bottom: 1px solid #f1f1f1;
}
table td
{
  border-bottom: 1px solid #f1f1f1;
  padding: 9px 8px;
}
table tbody tr:hover td
{
  background-color: #fafafa;
}
table.metrics-table {
  text-align: center;
}
canvas {
  float: none;
  margin: 0 auto;
}
/*********************************************
    Widget Elements
*********************************************/
.progress-bar {
  background-color: #eec;
  border-radius: 10px; /* (height of inner div) / 2 + padding */
  padding: 0px;
  clear: both;
  display: inline-block;
  overflow: hidden;
  white-space: nowrap;
}
.progress-bar > div {
  background-color: #1EAEDB;
  width: 0%;
  height: 5px;
  border-radius: 5px;
}
.table-data-plugin .filter-container {
  padding-bottom: 0;
  margin: 0;
}
.table-data-plugin .filter, 
.table-data-plugin .filter:focus,
.table-data-plugin .filter:active {
  height: 20px;
  padding: 5px;
  margin: 5px;
  border: none;
  outline-color: transparent;
  background: transparent;
  width: 100%;
  margin: 0;
  text-align: center;
  font-size: 15px;
}
.table-data-plugin .filter:focus {
  border-bottom: 1px solid #ff5722;
}
.table-data-plugin thead tr th a, 
.table-data-plugin thead tr th a:visited {
  color: black;
  text-decoration: none;
}
.table-data-plugin .column-sort-caret {
  font-size: 10px;
  color: #1EAEDB;
}

